Add Railway deployment config and multiplayer mode